--- a/pcb_project.ipynb
+++ b/pcb_project.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGh84e9Ek8/1RPhKc4RdrZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +34,29 @@
       "outputs": [],
       "source": [
         "print(\"hello team\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"hey\")"
+      ],
+      "metadata": {
+        "id": "vyqRdyecPZKK",
+        "outputId": "2c6bca38-d763-4b36-a2fe-ff0af643a984",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hey\n"
+          ]
+        }
       ]
     }
   ]
