--- a/pcb_project.ipynb
+++ b/pcb_project.ipynb
@@ -27,11 +27,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "sejrOCeSJr4L"
+        "id": "sejrOCeSJr4L",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "66e681d0-36d6-4cca-d7a4-7f211e5bc55d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello team\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"hello team\")"
       ]
@@ -39,22 +51,22 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"hey\")"
+        "print('hi')"
       ],
       "metadata": {
-        "id": "vyqRdyecPZKK",
-        "outputId": "2c6bca38-d763-4b36-a2fe-ff0af643a984",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eRV5-aQTPRMa",
+        "outputId": "b2b975e2-3f59-4366-9019-5967c597de0b"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hey\n"
+            "hi\n"
           ]
         }
       ]
