--- a/pcb_project.ipynb
+++ b/pcb_project.ipynb
@@ -27,23 +27,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "id": "sejrOCeSJr4L",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "66e681d0-36d6-4cca-d7a4-7f211e5bc55d"
+        "id": "sejrOCeSJr4L"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "hello team\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "print(\"hello team\")"
       ]
@@ -51,14 +39,14 @@
     {
       "cell_type": "code",
       "source": [
-        "print('hi')"
+        "print (\"hey guys\")"
       ],
       "metadata": {
+        "id": "xyYamuOTQHTg",
+        "outputId": "9ce635db-af41-4113-abac-e1f2bd4acebb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "eRV5-aQTPRMa",
-        "outputId": "b2b975e2-3f59-4366-9019-5967c597de0b"
+        }
       },
       "execution_count": 2,
       "outputs": [
@@ -66,7 +54,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hi\n"
+            "hey guys\n"
           ]
         }
       ]
